--- a/scenarios/rna-seq-variant-calling/scenario.yaml
+++ b/scenarios/rna-seq-variant-calling/scenario.yaml
@@ -1,7 +1,6 @@
 sample:
   hamletsrna:
-    universte: "[0.0,1.0]"
-    resolution: 10
+    universe: "[0.0,1.0]"
 
 events:
   present: "hamletsrna:]0.0,1.0]"
